--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,40 +1,3 @@
-@charset "UTF-8";
-:root {
-  --bs-blue: #0d6efd;
-  --bs-white: #fff;
-  --bs-gray: #6c757d;
-  --bs-gray-dark: #343a40;
-  --bs-gray-100: #f8f9fa;
-  --bs-gray-200: #e9ecef;
-  --bs-gray-300: #dee2e6;
-  --bs-gray-400: #ced4da;
-  --bs-gray-500: #adb5bd;
-  --bs-gray-600: #6c757d;
-  --bs-gray-700: #495057;
-  --bs-gray-800: #343a40;
-  --bs-gray-900: #212529;
-  --bs-primary: #0d6efd;
-  --bs-secondary: #6c757d;
-  --bs-light: #f8f9fa;
-  --bs-dark: #212529;
-  --bs-primary-rgb: 13, 110, 253;
-  --bs-secondary-rgb: 108, 117, 125;
-  --bs-light-rgb: 248, 249, 250;
-  --bs-dark-rgb: 33, 37, 41;
-  --bs-white-rgb: 255, 255, 255;
-  --bs-black-rgb: 0, 0, 0;
-  --bs-body-rgb: 33, 37, 41;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: var(--bs-font-sans-serif);
-  --bs-body-font-size: 1rem;
-  --bs-body-font-weight: 400;
-  --bs-body-line-height: 1.5;
-  --bs-body-color: #212529;
-  --bs-body-bg: #fff;
-}
-
 *,
 *::before,
 *::after {
@@ -50,13 +13,12 @@
 
 body {
   margin: 0;
-  font-family: var(--bs-body-font-family);
-  font-size: var(--bs-body-font-size);
-  font-weight: var(--bs-body-font-weight);
-  line-height: var(--bs-body-line-height);
-  color: var(--bs-body-color);
-  text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  font-family:"Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -123,11 +85,6 @@ a:hover {
   color: #0a58ca;
 }
 
-a:not([href]):not([class]), a:not([href]):not([class]):hover {
-  color: inherit;
-  text-decoration: none;
-}
-
 img,
 svg {
   vertical-align: middle;
@@ -165,13 +122,8 @@ select {
 }
 
 
-/*! 3 CLASSES*/
-/*! 3.1 CLASSES NAV
-navbar bg-dark sticky-top
-container
-nav-link link-secondary p-0
-nav justify-content-end
-*/
+/* NAV*/
+
 
 .navbar {
   position: relative;
@@ -182,7 +134,7 @@ nav justify-content-end
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.navbar > .container {
+.navbar .container {
   display: flex;
   flex-wrap: inherit;
   align-items: center;
@@ -195,8 +147,7 @@ nav justify-content-end
 }
 
 .bg-dark {
-  --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgba(33,37,41,1) !important;
 }
 
 .sticky-top {
@@ -209,8 +160,8 @@ nav justify-content-end
 .container,
 .container-fluid {
   width: 100%;
-  padding-right: var(--bs-gutter-x, 0.75rem);
-  padding-left: var(--bs-gutter-x, 0.75rem);
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
   margin-right: auto;
   margin-left: auto;
 }
@@ -246,13 +197,8 @@ nav justify-content-end
   padding: 0.5rem 1rem;
   color: #0d6efd;
   text-decoration: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
-@media (prefers-reduced-motion: reduce) {
-  .nav-link {
-    transition: none;
-  }
-}
+
 .nav-link:hover, .nav-link:focus {
   color: #0a58ca;
 }
@@ -282,7 +228,7 @@ nav justify-content-end
 
 .text-white {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
+   color: rgba(255,255,255,1) !important;
 }
 
 .pb-5 {
@@ -298,17 +244,18 @@ nav justify-content-end
   --bs-gutter-y: 0;
   display: flex;
   flex-wrap: wrap;
-  margin-top: calc(var(--bs-gutter-y) * -1);
-  margin-right: calc(var(--bs-gutter-x) * -.5);
-  margin-left: calc(var(--bs-gutter-x) * -.5);
+  margin-top: 0;
+  margin-right: -0.75rem;
+  margin-left: -0.75rem;
 }
+
 .row > * {
   flex-shrink: 0;
   width: 100%;
   max-width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * .5);
-  padding-left: calc(var(--bs-gutter-x) * .5);
-  margin-top: var(--bs-gutter-y);
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+  margin-top: 3rem;
 }
 
 .flex-lg-row-reverse {
@@ -319,15 +266,6 @@ nav justify-content-end
   align-items: center !important;
 }
 
-.g-5,
-.gx-5 {
-  --bs-gutter-x: 3rem;
-}
-
-.g-5,
-.gy-5 {
-  --bs-gutter-y: 3rem;
-}
 
 @media (min-width: 992px) {
   .col-lg-7 {
@@ -415,13 +353,8 @@ nav justify-content-end
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-@media (prefers-reduced-motion: reduce) {
-  .btn {
-    transition: none;
-  }
-}
+
 .btn:hover {
   color: #212529;
 }
@@ -521,9 +454,13 @@ nav justify-content-end
  Frase
 */
 
+.bg-light > h2{
+  color:#0d6efd;
+  font-size: calc(1.425rem + 2.1vw);
+}
+
 .bg-light {
-  --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgba(248,249,250, 1) !important;
 }
 
 .p-5 {
@@ -577,8 +514,7 @@ nav justify-content-end
 }
 
 .bg-primary {
-  --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgba(13, 110, 253, 1) !important;
 }
 
 .rounded-3 {
@@ -641,10 +577,18 @@ nav justify-content-end
 }
 
 .text-muted {
-  --bs-text-opacity: 1;
-  color: #fff!important;
+  color: rgba(255, 255, 255, 1)!important;
 }
 
 .m-0 {
   margin: 0 !important;
+}
+
+/* Body about */
+.container2{
+  display: flex;
+}
+.container2 .ct-objectives{
+  width: 50%;
+  padding: 0 3rem;
 }
