--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -570,18 +570,40 @@ select {
 }
 
 /* Body about */
-.container2{
+.container2 , .container2-reverse{
   display: flex;
   justify-content: space-around;
   -webkit-text-size-adjust: 100%;
 }
 .container2 .ct-objectives{
-    width: 50%;
+   flex-grow: 2;
 }
 
 .container2 .ct-objectives .body-ct-objective{
   text-align: justify;
 }
-.container .ubication{
+.container2 .ubication{
   text-align: center;
+  margin: 40px;
+}
+
+.container2 .ubication h2{
+  margin-bottom: 40px;
+}
+.container2 .ubication iframe{
+  width: 90%;
+  height: 350px;
+}
+@media (max-width: 400px) {
+  .container2 {
+    display: flex;
+    flex-direction: column;
+  }
+  .container2-reverse{
+    flex-flow: column-reverse;
+  }
+
+  .container2 .ubication .iframe {
+    width: 90%
+  }
 }
