--- a/CSS/tables.css
+++ b/CSS/tables.css
@@ -136,6 +136,53 @@ body {
     padding-top: 1rem !important;
 }
 
+.container2{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.container2 h2.title{
+    margin: 1.2rem 0;
+}
+.container2 .search-bar{
+    flex: 1 1 auto;
+    width: 100%;
+    padding: 1.2rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.container2 .search-bar input{
+    width: 60%;
+    height: 2.4rem;
+    border: none;
+    border-bottom: black solid 2px;
+    outline: none;
+}
+
+.container2 .search-bar input:focus{
+    border-bottom:#0d6efd solid 2px;
+}
+
+.container2 .search-bar button{
+    background-color: #0d6efd;
+    color: white;
+    padding: 0.7rem;
+    border: white solid 2px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.container2 .search-bar button:hover{
+    background-color: white;
+    color: #0d6efd;
+    padding: 0.7rem;
+    border: #0d6efd solid 2px;
+    border-radius: 5px;
+}
+
 /* Tables */
 table {
     border: 1px solid #ccc;
