--- a/CSS/tables.css
+++ b/CSS/tables.css
@@ -37,7 +37,7 @@ body {
 }
 
 .bg-dark {
-    background-color: rgba(33, 37, 41, 1) !important;
+    background-color: #76b5c5 !important;
 }
 
 .sticky-top {
@@ -136,17 +136,19 @@ body {
     padding-top: 1rem !important;
 }
 
-.container2{
+.container2 {
     display: flex;
     flex-direction: column;
     width: 100%;
     justify-content: center;
     align-items: center;
 }
-.container2 h2.title{
+
+.container2 h2.title {
     margin: 1.2rem 0;
 }
-.container2 .search-bar{
+
+.container2 .search-bar {
     flex: 1 1 auto;
     width: 100%;
     padding: 1.2rem;
@@ -154,7 +156,7 @@ body {
     margin-bottom: 2rem;
 }
 
-.container2 .search-bar input{
+.container2 .search-bar input {
     width: 60%;
     height: 2.4rem;
     border: none;
@@ -162,12 +164,12 @@ body {
     outline: none;
 }
 
-.container2 .search-bar input:focus{
-    border-bottom:#0d6efd solid 2px;
+.container2 .search-bar input:focus {
+    border-bottom: #76b5c5 solid 2px;
 }
 
-.container2 .search-bar button{
-    background-color: #0d6efd;
+.container2 .search-bar button {
+    background-color: #76b5c5;
     color: white;
     padding: 0.7rem;
     border: white solid 2px;
@@ -175,12 +177,47 @@ body {
     cursor: pointer;
 }
 
-.container2 .search-bar button:hover{
+.container2 .search-bar button:hover {
     background-color: white;
-    color: #0d6efd;
+    color: #76b5c5;
     padding: 0.7rem;
-    border: #0d6efd solid 2px;
+    border: #76b5c5 solid 2px;
     border-radius: 5px;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+}
+
+.btn-primary {
+    color: white;
+    background-color: #76b5c5;
+    border-color: white;
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #565e64;
+    border-color: #fff;
+}
+
+main {
+    margin-bottom: 3rem !important;
 }
 
 /* Tables */
