--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -241,10 +241,9 @@ select {
 
 .text-gray {
   --bs-text-opacity: 1;
-   color:  #565e64 !important;
-   border: 2px solid #565e64;
+  color:  #565e64 !important;
+  border: 2px solid #565e64;
 }
-
 
 .pb-5 {
   padding-bottom: 3rem !important;
@@ -280,6 +279,17 @@ select {
   justify-content: center ;
 }
 
+nav .container ul.nav li  a  .shopping-car{
+  background: url(../Images/shopping-car-b.png) center center/cover; 
+  width: 24px;
+  height: 24px;
+}
+
+nav .container ul.nav li  a  .shopping-car:hover{
+  background: url(../Images/shopping_car_g.png) center center/cover; 
+  width: 24px;
+  height: 24px;
+}
 
 @media (min-width: 992px) {
   .col-lg-7 {
@@ -401,8 +411,95 @@ select {
   padding-left: 3rem !important;
 }
 
+/* Shopping car Modal */
+.modal-container{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: rgba(0,0,0,0.75);
+  display: none;
+  transition: opacity 250ms ease;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal{
+  margin: auto;
+  width: 90%;
+  max-width: 40rem;
+  background-color: white;
+  border-radius: 1.5rem;
+  overflow: auto;
+  background: linear-gradient(135deg, hsl(192, 41%, 62%),hsl(192, 41%, 62%));
+  box-shadow: 0 1rem 2rem #000a;
+}
+  
+.modal-header,
+.modal-content {
+  padding: 1.5rem;
+}
 
+.modal-header {
+  background-color: hsla(192, 80%, 90%, 0.2);
+  border-radius: 1.5rem 1.5rem 0 0;
+  display: flex;
+  justify-content: space-between;
+  border: 4px solid #565e642f;
+  border-bottom: none;
+}
 
+.modal-title {
+  margin: 0;
+  color: white;
+}
+
+.modal-close {
+  color: transparent;
+  display: block;
+  height: 1.5rem;
+  width: 1.5rem;
+  overflow: hidden;
+  background-image:
+    linear-gradient(
+      to top right,
+      transparent 48%,
+      white 48%,
+      white 52%,
+      transparent 52%
+    ),
+    linear-gradient(
+      to top left,
+      transparent 48%,
+      white 48%,
+      white 52%,
+      transparent 52%
+    );
+}
+.modal-footer {
+  background-color: #fff;
+  border-radius: 0 0 1.5rem 1.5rem;
+  border: 4px solid #565e6444;
+  padding: 1rem;
+}
+.modal-container:target{
+  opacity: 1;
+  pointer-events: all;
+}
+
+.modal-content{
+  color: #565e64;
+  border: 4px solid #565e6444;
+  border-top: none;
+  background-color: #fff;
+}
+
+.new-Product{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 /*
     Photos
 */
@@ -471,7 +568,7 @@ select {
 
 
 /*
- Frase
+Frase
 */
 
 .bg-light > h2{
@@ -598,7 +695,7 @@ select {
   -webkit-text-size-adjust: 100%;
 }
 .container2 .ct-objectives{
-   flex-grow: 2;
+  flex-grow: 2;
 }
 
 .container2 .ct-objectives .body-ct-objective{
