--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -755,3 +755,57 @@ Frase
     width: 90%
   }
 }
+
+/* CAR TOAST */
+.toastBox{
+  position: absolute;
+  width: 300px;
+  height: 80px;
+  bottom: 30px;
+  right: 30px;
+  background-color: #fff;
+  display: none;
+  flex-direction: column;
+  align-items: start;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  padding: 4px;
+  transform: translateX(100%);
+  animation: moveLeft 0.5s linear forwards;
+}
+.toastBox .toastHeader{
+  align-self: flex-end;
+}
+.toastContent{
+  height: 80px;
+  background-color: #fff;
+  font-weight: 500px;
+}
+.toastBox .toastContent i{
+  position: relative;
+  margin: 0 20px;
+  font-size: 24px;
+  color: green;
+}
+
+.toastContent::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5px;
+  background-color: green;
+  animation: progressBar 5s linear forwards;
+}
+@keyframes moveLeft {
+  100%{
+      transform: translateX(0%);
+  }
+}
+
+@keyframes progressBar {
+  100%{
+      width: 0;
+  }
+}
